src/objects/DOZISF__ZoomInfo__c.object
<CustomObject>
    <fields>
        <fullName>DOZISF__Ultimate_Parent_Company_Name__c</fullName>
        <description>Ultimate Parent Companies&apos; Business Name.</description>
        <inlineHelpText>Ultimate Parent Companies&apos; Business Name.</inlineHelpText>
        <label>Ultimate Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Ultimate_Parent_Company_ZoomInfo_ID__c</fullName>
        <description>Unique identifier for ultimate parent company that has acquired requested company.</description>
        <inlineHelpText>Unique identifier for ultimate parent company that has acquired requested company.</inlineHelpText>
        <label>Ultimate Parent Company ZoomInfo ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Website__c</fullName>
        <description>URL to the company website in http://www.example.com format.</description>
        <inlineHelpText>URL to the company website in http://www.example.com format.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOZISF__Within_EU__c</fullName>
        <description>European union geographic region designation.</description>
        <inlineHelpText>European union geographic region designation.</inlineHelpText>
        <label>Within EU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <description>Internal ID number of the matching ZoomInfo Company profile.</description>
        <inlineHelpText>Internal ID number of the matching ZoomInfo Company profile.</inlineHelpText>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Contact_ID__c</fullName>
        <description>Internal ID number of the matching ZoomInfo person profile.</description>
        <inlineHelpText>Internal ID number of the matching ZoomInfo person profile.</inlineHelpText>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <description>Enrich Status for the record - Enriched/No-Match etc.</description>
        <inlineHelpText>Enrich Status for the record - Enriched/No-Match etc.</inlineHelpText>
        <label>ZoomInfo Enrich Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZoomInfo External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <inlineHelpText>Date and time when the record was first created or updated by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when Enrich tool was last run.</description>
        <inlineHelpText>Date and time when Enrich tool was last run.</inlineHelpText>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_URL__c</fullName>
        <description>A link to person profile on the zoominfo website.</description>
        <inlineHelpText>A link to person profile on the zoominfo website.</inlineHelpText>
        <label>ZoomInfo URL</label>
        <type>Url</type>
    </fields>
    <recordTypes>
        <fullName>DOZISF__Company</fullName>
        <active>true</active>
        <description>Use for ZoomInfo Company records</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOZISF__Contact</fullName>
        <active>true</active>
        <description>Use for ZoomInfo Contact records</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOZISF__ZoomInfo</fullName>
        <active>true</active>
        <description>Use for ZoomInfo records</description>
        <label>ZoomInfo</label>
    </recordTypes>
</CustomObject>